# renpy-stubs

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  main.py  pyproject.toml
renpy-stubs/: __init__.pyi  atl.pyi  bootstrap.pyi  character.pyi  color.pyi  config.pyi  curry.pyi  debug.pyi  error.pyi  importer.pyi  lint.pyi  loader.pyi  log.pyi  main.pyi  memory.pyi  object.pyi  preferences.pyi  pyanalysis.pyi  savelocation.pyi  screenlang.pyi  scriptedit.pyi  statements.pyi  substitutions.pyi  util.pyi  versions.pyi
renpy-stubs/audio/: audio.pyi  music.pyi  webaudio.pyi
renpy-stubs/compat/: __init__.pyi
renpy-stubs/display/: __init__.pyi  anim.pyi  controller.pyi  error.pyi  im.pyi  image.pyi  imagelike.pyi  imagemap.pyi  module.pyi  motion.pyi  movetransition.pyi  particle.pyi  position.pyi  video.pyi  viewport.pyi
renpy-stubs/gl2/: gl2functions.pyi  live2dmotion.pyi
renpy-stubs/pygame/: __init__.pyi
renpy-stubs/sl2/: sldisplayables.pyi
renpy-stubs/styledata/: styleutil.pyi
renpy-stubs/uguu/: __init__.pyi
renpy-stubs/update/: generate.pyi  update.pyi
scripts/: config.py  generate_pyi.py  merge_pyi.py  relative_imports.py
src/: _renpy.pyi  _renpybidi.pyi  emscripten.pyi
src/android-stubs/: __init__.pyi
src/renpy-stubs/: __init__.pyi  add_from.pyi  arguments.pyi  ast.pyi  astsupport.pyi  atl.pyi  bootstrap.pyi  character.pyi  color.pyi  config.pyi  cslots.pyi  curry.pyi  debug.pyi  defaultstore.pyi  dump.pyi  easy.pyi  editor.pyi  encryption.pyi  error.pyi  execution.pyi  game.pyi  importer.pyi  lexer.pyi  lexersupport.pyi  lint.pyi  loader.pyi  loadsave.pyi  log.pyi  main.pyi  memory.pyi  minstore.pyi  object.pyi  parameter.pyi  parser.pyi  performance.pyi  persistent.pyi  preferences.pyi  pyanalysis.pyi  pydict.pyi  python.pyi  (+17 more)
src/renpy-stubs/audio/: __init__.pyi  audio.pyi  filter.pyi  music.pyi  renpysound.pyi  sound.pyi  webaudio.pyi
src/renpy-stubs/common/: 00db_ren.pyi  00layeredimage_ren.pyi  00sshtransition_ren.pyi  00textshader_ren.pyi
src/renpy-stubs/compat/: __init__.pyi  fixes.pyi  pickle.pyi
src/renpy-stubs/display/: __init__.pyi  accelerator.pyi  anim.pyi  behavior.pyi  controller.pyi  core.pyi  displayable.pyi  dragdrop.pyi  emulator.pyi  error.pyi  focus.pyi  gesture.pyi  im.pyi  image.pyi  imagelike.pyi  tts.pyi  (+24 more)
(+108 files in other folders)
