[project]
name = "renpy-stubs"
version = "0.0.1"
description = "Type stubs for Ren'Py"
requires-python = "==3.12.*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/renpy-stubs", "src/android-stubs"]

[tool.hatch.build.targets.wheel.force-include]
"src/_renpy.pyi" = "_renpy.pyi"
"src/_renpybidi.pyi" = "_renpybidi.pyi"
"src/emscripten.pyi" = "emscripten.pyi"
"src/jnius.pyi" = "jnius.pyi"

[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = true

[tool.ruff.lint]
# See Rules in Ruff documentation: https://docs.astral.sh/ruff/rules/

# Disable F rules until import renpy is fixed
ignore = ["F"]
